--- a/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
@@ -74,7 +74,7 @@
                                                 <i class="fa fa-microphone"></i>
                                             </div>
                                         </div>
-                                        <div title="Loa" id="scrn" class="volumn-control media-box">
+                                        <div title="Loa" id="speaker" class="volumn-control media-box">
                                             <div class="sim-row-edit-icon2">
                                                 <i class="fa fa-bell"></i>
                                             </div>
@@ -198,7 +198,7 @@
                                                                     <use xlink:href="#icon-px_ic__User"></use>
                                                                 </svg>
                                                             </div>
-                                                            <span>Milicevic</span>
+                                                            <span id="name-private"></span>
                                                         </a>
                                                     </li>
                                                 </ul>
@@ -240,6 +240,17 @@
                                                                 </div>
                                                             </div>
                                                         </a>
+                                                        <div>
+                                                            <div id="sideToolbarContainerChat">
+                                                                <div id="chat_container" data-userid-private="0"
+                                                                     class="sideToolbarContainer__inner">
+                                                                    <div id="chatconversation">
+                                                                    </div>
+
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
                                                     </div>
                                                 </div>
                                             </div>
