--- a/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
@@ -219,15 +219,11 @@
                                                         <div>
                                                             <ul id="chat-userlist" class="list-group chat-userlist">
                                                                 <!-- Show list user in chatbox -->
-                                                                <a id="" class="nav-link" data-toggle="tab"
-                                                                href="#chat-particular">
-
-                                                                </a>
                                                             </ul>
                                                         </div>
                                                     </div>
                                                     <div id="chat-particular" class="tab-pane">
-                                                        <a class="nav-link" data-toggle="tab" href="#chat-group">
+                                                        <a id="bk-icon" class="nav-link" data-toggle="tab" href="#chat-group">
                                                             <div class="back">
                                                                 <div class="box-media-control back-chat">
                                                                     <div class="group-media-control">
@@ -240,17 +236,6 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                        <div>
-                                                            <div id="sideToolbarContainerChat">
-                                                                <div id="chat_container" data-userid-private="0"
-                                                                     class="sideToolbarContainer__inner">
-                                                                    <div id="chatconversation">
-                                                                    </div>
-
-                                                                </div>
-                                                            </div>
-                                                        </div>
-
                                                     </div>
                                                 </div>
                                             </div>
