--- a/AppEducation/AppEducation/Views/Shared/_LayoutAdmin.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutAdmin.cshtml
@@ -77,7 +77,7 @@
                                 </div>
                             </li>
                             <li class="left__menuItem">
-                                <a href="" class="left__title"><img src="~/pages/admin/assets/icon-logout.svg" alt="">Đăng Xuất</a>
+                                <a asp-action="Logout" asp-controller="Account" class="left__title"><img src="~/pages/admin/assets/icon-logout.svg" alt="">Đăng Xuất</a>
                             </li>
                         </ul>
                     </div>
