--- a/AppEducation/AppEducation/Views/Account/Login.cshtml
+++ b/AppEducation/AppEducation/Views/Account/Login.cshtml
@@ -15,7 +15,7 @@
 		<p>Sign In</p>
 	</div>
 	<div asp-validation-summary="All" class="text-danger"></div>
-	<form asp-area="" asp-controller="Account" asp-action="Login"  >
+	<form asp-area="" asp-controller="Account" asp-action="Login" asp-antiforgery="true"  >
 		<div class="form">
 			<div class="input_field">
 				<label>User Name</label>
