--- a/AppEducation/AppEducation/Views/_ViewImports.cshtml
+++ b/AppEducation/AppEducation/Views/_ViewImports.cshtml
@@ -3,5 +3,7 @@
 @using AppEducation.Models.Users
 @using Microsoft.AspNetCore.Identity
 @using System.Linq
+@using System.Security.Cryptography
+@using System.Text
 @addTagHelper AppEducation.Infastructure.* , AppEducation
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
