--- a/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
@@ -114,7 +114,7 @@
                                                     </div>
                                                     <div class="modal-footer">
                                                         <button  class="btn-border">
-                                                            <a asp-action="Create" asp-controller="JoinClass">Thoát khỏi lớp</a>
+                                                            <a asp-action="GetOutClass" asp-controller="JoinClass">Thoát khỏi lớp</a>
                                                         </button>
                                                         <button class="btn-full" data-dismiss="modal">
                                                             Đóng
