--- a/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
@@ -105,7 +105,7 @@
                                                     </div>
                                                     <div class="modal-footer">
                                                         <button class="btn-border">
-                                                            <a asp-action="GetOutClass" asp-controller="JoinClass">Thoát khỏi lớp</a>
+                                                            <a asp-action="Create" asp-controller="JoinClass">Thoát khỏi lớp</a>
                                                         </button>
                                                         <button class="btn-full" data-dismiss="modal">
                                                             Đóng
@@ -135,7 +135,7 @@
                                             <video id="screen" autoplay="autoplay"></video>
                                         </div>
                                         <div>
-                                            <button class="btn-lg btn-warning">Chọn trình chiếu</button>
+                                            <button class="btn-lg btn-warning" id="zoom">Full Screen</button>
                                         </div>
 
                                     </div>
