--- a/AppEducation/AppEducation/Views/Admin/UserManager.cshtml
+++ b/AppEducation/AppEducation/Views/Admin/UserManager.cshtml
@@ -1,20 +1,34 @@
-@model IEnumerable<AppUser>
+
 @{
-    Layout = "_LayoutAdmin";
-    ViewData["Title"] = "Index";
-    
-}
-@section Head{
-    <link type="text/css" rel="stylesheet" href="~/pages/admin/css/viewdetails.css"/>
+    ViewData["Title"] = "UserManager";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-@section Content{
-<div class="right__content">
-    <div class="right__title">Danh Sách Người Dùng</div>
-    <div class="right__table">
-        <p class="right__tableTitle">Thông tin tài khoản</p>
-        <div class="right__tableWrapper">
-            <table id="example1" class="table table-striped table-bordered table-sm"  cellspacing="0" >
+@model IEnumerable<AppUser>
+<div class="card mb-4">
+    <div class="card-header">
+        <div class="row">
+            <div class="col-md-6 col-xs-12">
+                <a class="btn btn-success" asp-action="Create" asp-controller="Admin">Tạo mới</a>
+            </div>
+            <div class="col-md-6 col-xs-12">
+                <form asp-action="Index" method="get">
+                    <div class="row">
+                        <div class="col-md-9">
+                            <input type="text" value="@ViewBag.Keyword" name="keyword" class="form-control" />
+                        </div>
+                        <div class="cold-md-3">
+                            <button type="submit" class="btn btn-primary">Tìm</button>
+                            <button type="button" onclick="window.location.href='/User/Index'" class="btn btn-dark">Reset</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
                         <th>Order Number</th>
@@ -43,12 +57,9 @@
                                 <td data-label="UserName">@user.UserName</td>
                                 <td data-label="Email" style="text-align: left;">@user.Email</td>
                                 <td data-label="Modify">
-                                    <form asp-action="Delete" asp-route-id="@user.Id" method="post">
-                                        <a id="@user.Id" class="details btn btn-sm btn-primary"   onclick="document.getElementById('id02').style.display='block'">Details</a>
-                                        <button type="submit" class="btn btn-sm btn-danger">
-                                            Delete
-                                        </button>
-                                    </form>
+                                    @Html.ActionLink("Edit", "Edit", "Admin", new { id = user.Id }) |
+                                    @Html.ActionLink("Details", "Details", "Admin", new { id = user.Id }) |
+                                    @Html.ActionLink("Delete", "Admin", "Admin", new { id = user.Id }) |
                                 </td>
                             </tr>
                             i++;
@@ -61,32 +72,12 @@
                         <th>ID</th>
                         <th>User Name</th>
                         <th style="text-align: left;">Email</th>
-
                         <th>Modify</th>
                     </tr>
                 </tfoot>
             </table>
         </div>
-       
-
-        </div>
     </div>
 </div>
-<div id="id02" class="modal">
-    <div class="modal-content-create cont-create">
-        <div class="container">
-            <div class="row">
-                <div class="close-set text-right ">
-                <h1 class="text-center">Thông tin chi tiết</h1> <hr>
-                <input class="btn btn-lg" type="button" onclick="document.getElementById('id02').style.display='none'" class="btn btn-primary" value="Thoát" />
-                </div>
-                <div id="details"></div>
-            </div>
-        </div>
-    </div>
-</div>
-}
 
-@section Script {
-    <script src="~/pages/admin/js/viewdetail.js"></script>
-}
+
